# study-c-everyday

./: .gitignore
day01/: hello
day01/src/: hello.cpp
day02/: CMakeLists.txt
day02/include/: print.h
day02/src/: hello.cpp  print.cpp
day03/: CMakeLists.txt
day03/include/: acculate.h
day03/src/: acculate.cpp  main.cpp
day04/: CMakeLists.txt
day04/src/: main.cpp
day05/: CMakeLists.txt
day05/include/: contact.h  person.h  selectPerson.h  showMenu.h
day05/src/: addPerson.cpp  main.cpp  selectPerson.cpp  showMenu.cpp
day06/: CMakeLists.txt
day06/include/: addPerson.h  clearContac.h  contact.h  deletePerson.h  findPerson.h  isExist.h  searchPerson.h
day06/src/: addPerson.cpp  contact.cpp  deletePerson.cpp  isExist.cpp  searchPerson.cpp  selectPerson.cpp
